Fix several layout issues
- `.container` set to a max constraints of 1920px
- common class declarations are moved to the top
- actions buttons in are aligned to match other elements
- projects section is 4x wider than announcements and trending
- Fix misplaced `grid-area` declaration to projects section
- reduced horizontal padding in project cards
- spacing corrections inside trending section

--- a/style.css
+++ b/style.css
@@ -11,25 +11,12 @@
 }
 
 .container {
-    width: 100%;
+    max-width: 1920px;
+    margin: 0 auto;
     display: grid;
-    grid-template-columns: 1fr 5fr;
+    grid-template-columns: 15rem 1fr;
     grid-template-areas: 'sidebar header'
                          'sidebar main';
-}
-
-
-/* Rules for Header Section */
-header {
-    padding: 1rem 2rem;
-    grid-area: header;
-    display: grid;
-    grid-template-rows: 1fr 2fr;
-    grid-template-areas: 'search-bar user-info'
-                         'welcome    actions';
-    align-items: center;
-    column-gap: 2rem;
-    row-gap: 1rem;
 }
 
 .icon {
@@ -46,8 +33,22 @@ header {
 }
 
 .avatar-large {
-    height: 4.5rem;
-    width: 4.5rem;
+    height: 5rem;
+    width: 5rem;
+}
+
+
+/* Rules for Header Section */
+header {
+    padding: 1rem 2rem;
+    grid-area: header;
+    display: grid;
+    grid-template-rows: 1fr 2fr;
+    grid-template-areas: 'search-bar user-info'
+                         'welcome    actions';
+    align-items: center;
+    column-gap: 2rem;
+    row-gap: 1rem;
 }
 
 /* Search Bar */
@@ -115,6 +116,7 @@ header {
     grid-area: 'actions';
     display: grid;
     grid-template-columns: 1fr 1fr 1fr;
+    justify-items: end;
     align-items: center;
     gap: 1rem;
 }
@@ -224,7 +226,7 @@ main {
     background-color: lightsteelblue;
     padding: 1.5rem;
     display: grid;
-    grid-template-columns: 3fr 1fr;
+    grid-template-columns: 4fr 1fr;
     grid-template-areas: 'projects announcements'
                          'projects trending';
     gap: 1rem;
@@ -237,10 +239,13 @@ main {
 
 
 /* Rules for Project Section */
-.projects-grid {
+.projects {
     grid-area: projects;
+}
+
+.projects-grid {
     display: grid;
-    grid-template-columns: 1fr 1fr;
+    grid-template-columns: repeat(auto-fit, 25rem);
     align-content: start;
     align-items: start;
     gap: 2rem;
@@ -250,7 +255,7 @@ main {
     height: 15rem;
     width: 25rem;
     background-color: whitesmoke;
-    padding: 2rem;
+    padding: 2rem 1rem;
     border-left: 8px solid var(--secondary-color);
     border-radius: 8px;
     display: grid;
@@ -321,21 +326,27 @@ main {
     grid-area: trending;
 }
 
+.trend-list {
+    row-gap: 2rem;
+}
+
 .trend-list li {
     display: grid;
     grid-template-areas: 'pic handle'
                          'pic trend';
-    gap: 1rem;
+    column-gap: 1rem;
     justify-content: start;
     align-items: center;
 }
 
 .trend-list .avatar {
     grid-area: pic;
+    scale: 1.25;
 }
 
 .trend-list .user-handle {
     grid-area: handle;
+    padding-bottom: 0.125rem;
 }
 
 .trend-list .update {
